# Leaf-Disease-Classification

./: .gitignore  README.md  XAI_IMPLEMENTATION.md  out.html  pyproject.toml  railpack.json  railpack.toml  render.yaml  requirements.txt
notebooks/: Copy_of_RubberLeaf_Diseases(ViT).ipynb  Rubber Leaf Disease Classification.ipynb
tests/: test_gradcam.py
webapp/: app.py  requirements.txt
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: index.html
