[project]
name = "leaf-disease-classification"
version = "1.0.0"
description = "Flask web app for rubber leaf disease classification"
requires-python = ">=3.11"
dependencies = [
  "flask",
  "tensorflow-cpu==2.16.2",
  "pillow",
  "numpy<2.0",
  "requests",
  "opencv-python-headless",
]

[tool.vercel]
entrypoint = "webapp.app:app"
