[project]
name = "leaf-disease-classification"
version = "1.0.0"
description = "Flask web app for rubber leaf disease classification"
requires-python = ">=3.11"
dependencies = [
  "flask",
  "tensorflow-cpu==2.20.0",
  "pillow",
  "numpy>=2.1,<2.2",
  "requests",
  "opencv-python-headless",
]

[tool.vercel]
entrypoint = "webapp.app:app"
